OPHY-421: Use double parentheses for ceil-function per https://stackoverflow.com/a/19706930. Fixes "Error evaluating function ceil, argument must be a number".

--- a/soresu-form/web/form/style/main.less
+++ b/soresu-form/web/form/style/main.less
@@ -247,19 +247,19 @@ section.soresu-theme {
     font-size: 18px;
 
     &.extra-extra-small {
-      width: ceil(@section-width / 8)  - 18px;
+      width: ceil((@section-width / 8))  - 18px;
     }
     &.extra-small {
-      width: ceil(@section-width / 4)  - 18px;
+      width: ceil((@section-width / 4))  - 18px;
     }
     &.small {
-      width: ceil(@section-width / 3) - 18px;
+      width: ceil((@section-width / 3)) - 18px;
     }
     &.medium {
-      width: ceil(@section-width / 2) - 18px;
+      width: ceil((@section-width / 2)) - 18px;
     }
     &.large {
-      width: ceil(@section-width / 1.5) - 28px;
+      width: ceil((@section-width / 1.5)) - 28px;
     }
     &.extra-large {
       width: @section-width - 18px;
@@ -268,19 +268,19 @@ section.soresu-theme {
 
   label {
     &.extra-extra-small {
-      width: ceil(@section-width / 8)  - 8px;
+      width: ceil((@section-width / 8))  - 8px;
     }
     &.extra-small {
-      width: ceil(@section-width / 4)  - 8px;
+      width: ceil((@section-width / 4))  - 8px;
     }
     &.small {
-      width: ceil(@section-width / 3) - 8px;
+      width: ceil((@section-width / 3)) - 8px;
     }
     &.medium {
-      width: ceil(@section-width / 2) - 8px;
+      width: ceil((@section-width / 2)) - 8px;
     }
     &.large {
-      width: ceil(@section-width / 1.5) - 18px;
+      width: ceil((@section-width / 1.5)) - 18px;
     }
     &.extra-large {
       width: @section-width - 8px;
