--- a/soresu-form/web/form/style/preview.less
+++ b/soresu-form/web/form/style/preview.less
@@ -52,19 +52,19 @@ div.soresu-attachment-display {
 
   .soresu-preview-element {
     &.extra-extra-small {
-      width: ceil(@section-width / 8);
+      width: ceil((@section-width / 8));
     }
     &.extra-small {
-      width: ceil(@section-width / 4);
+      width: ceil((@section-width / 4));
     }
     &.small {
-      width: ceil(@section-width / 3);
+      width: ceil((@section-width / 3));
     }
     &.medium {
-      width: ceil(@section-width / 2);
+      width: ceil((@section-width / 2));
     }
     &.large {
-      width: ceil(@section-width / 1.5);
+      width: ceil((@section-width / 1.5));
 
       @media print {
         width: 400px;
