--- a/va-common/web/va/style/soresu-va.less
+++ b/va-common/web/va/style/soresu-va.less
@@ -49,7 +49,7 @@
     .soresu-text-area {
       textarea {
         margin: 0;
-        width: ceil(@section-width / 2) - 19px;
+        width: ceil((@section-width / 2)) - 19px;
         height: 24px;
       }
       .length-left {
